fix: Resolve persistent type errors and update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,13 @@
         "./*"
       ]
     },
+    "types": [
+      "node",
+      "react",
+      "react-dom",
+      "three",
+      "@react-three/fiber"
+    ],
     "allowImportingTsExtensions": true,
     "noEmit": true
   }
